syntax = "proto3";

package helloworld;

service Greeter {
  rpc SayHelloClientStreaming (stream HelloRequest) returns (HelloResponse) {}
  rpc SayHelloServerStreaming (HelloRequest) returns (stream HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
